--- a/README
+++ b/README
@@ -1,9 +1,13 @@
-This is not an entire Zend Framework install. This is only the changes that have to happen to get this working. 
+# Facebook in Zend Framework
 
-1. First thing to do is to download the Facebook SDK. This will change so always check for the latest version. You will unzip it and save it under the library folder as facebook. I have this folder here. I also have a stub for the facebook class as we have to rename it to work with the autoloader.
+*Note: This is not an entire Zend Framework install. This is only the changes that have to happen to get this working.*
+
+1. First thing to do is to download the Facebook SDK. This will change so always check for the latest version. You will unzip it and save it under the library folder as facebook. I have included it here. I also have a stub for the facebook class as you will have to rename it to work with the autoloader.
 
 2. Now we will add the Josh folder under library with the facebook.php file. This is the class we will be using.
 
 3. We now have to load our application.ini file with our Facebook application ID and secret. We can have two different applications for production and development.
 
-4. We can now use this.
+4. Use it!
+
+I have created a full Zend Framework install that utilizes Facebook and more at https://github.com/johanan/Zend-Framework-Ajax-Login
